Closed Bug 596328 Opened 15 years ago Closed 15 years ago

non-IPC builds burning with nsContentPermissionHelper

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: standard8)

Details

Attachments

(1 file, 1 obsolete file)

One of the landings from http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=d668a9be7bd4&tochange=df5f653ea413 makes our tree burn, probably because we don't build IPC.
Providing the errors would be helpful.
Judging from the messages, which have us fail with nsContentPermissionHelper, this must be bug 595445 and/or bug 595456, and yes, I'm pretty sure that not having IPC enabled yet is the culprit.The bug belongs into DOM, where the failure is happening.
Component: General → DOM
Product: SeaMonkey → Core
QA Contact: general → general
Summary: SeaMonkey tree burning after some patches landed → SeaMonkey tree burning with nsContentPermissionHelper
Failure logs: Linux: http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1284490532.1284491031.5612.gz In file included from /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.cpp:38: /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:55: error: expected class-name before ‘{’ token /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:57: error: expected ‘,’ or ‘...’ before ‘::’ token /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:57: error: ISO C++ forbids declaration of ‘IPC’ with no type /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:60: error: ISO C++ forbids declaration of ‘nsCOMPtr’ with no type /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:60: error: expected ‘;’ before ‘<’ token /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:61: error: ISO C++ forbids declaration of ‘nsCOMPtr’ with no type /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:61: error: expected ‘;’ before ‘<’ token /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:62: error: ISO C++ forbids declaration of ‘nsCOMPtr’ with no type /builds/slave/comm-central-trunk-linux/build/mozilla/dom/base/nsContentPermissionHelper.h:62: error: expected ‘;’ before ‘<’ token NEXT ERROR make[6]: *** [nsContentPermissionHelper.o] Error 1 Mac: http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1284488480.1284488776.25575.gz In file included from /builds/slave/comm-central-trunk-linux64/build/mozilla/dom/base/nsContentPermissionHelper.cpp:38:0: /builds/slave/comm-central-trunk-linux64/build/mozilla/dom/base/nsContentPermissionHelper.h:41:29: fatal error: base/basictypes.h: No such file or directory compilation terminated. make[6]: *** [nsContentPermissionHelper.o] Error 1 Windows: http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1284490948.1284491711.9220.gz e:\builds\slave\comm-central-trunk-win32\build\mozilla\dom\base\nsContentPermissionHelper.h(41) : fatal error C1083: Cannot open include file: 'base/basictypes.h': No such file or directory make[6]: *** [nsContentPermissionHelper.obj] Error 2
Summary: SeaMonkey tree burning with nsContentPermissionHelper → non-IPC builds burning with nsContentPermissionHelper
I have a fix under test for this.
Assignee: nobody → bugzilla
Attached patch Bustage fix (obsolete) — Splinter Review
Bustage fix for non-IPC builds - just move the ifdef to encompass everything.
Attachment #475187 - Flags: review?
Attachment #475187 - Flags: approval2.0?
Attachment #475187 - Flags: review? → review?(benjamin)
Comment on attachment 475187 [details] [diff] [review] Bustage fix I think that the correct fix here is to ifdef out this file in the Makefile.in, not here. This will cause build warnings about empty .o files, which may actually be a build error in some configurations.
Attachment #475187 - Flags: review?(benjamin)
Attachment #475187 - Flags: review-
Attachment #475187 - Flags: approval2.0?
Attached patch Bustage fix v2Splinter Review
Knew I should have gone with the other version... This should fix it.
Attachment #475187 - Attachment is obsolete: true
Attachment #475215 - Flags: review?(benjamin)
Attachment #475215 - Flags: approval2.0?
I'm off to bed, so if this gets review and someone wants to land on my behalf, please do.
Attachment #475215 - Flags: review?(benjamin)
Attachment #475215 - Flags: review+
Attachment #475215 - Flags: approval2.0?
Attachment #475215 - Flags: approval2.0+
(In reply to comment #8) > Created attachment 475215 [details] [diff] [review] > Bustage fix v2 > > Knew I should have gone with the other version... This should fix it. Pushed by jdm as http://hg.mozilla.org/mozilla-central/rev/53a5148e8fad 00:08 < firebot> Thunderbird: 'WINNT 5.2 comm-central build' has changed state from Burning to Success. -> Resolved Fixed
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: