Bug 596328 - "non-IPC builds burning with nsContentPermissionHelper" r=benjamin a=benjamin